Añado un botón a la página que cambia al hacer click en él.

--- a/Primera Pagina/index.html
+++ b/Primera Pagina/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Este comentario no se verá -->
     <title>Mi primera página</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/index.js"></script>    
 </head>
 <body>
     <!-- Insertamos otro comentario -->
@@ -14,5 +16,9 @@
     <h2>Realizando un tercer commit</h2>
     <h2>Realizando Pruebas desde teclado</h2>
     <!-- Y con esto ya termino -->
+
+    <!-- Voy a agregar un botón a tu página que hará que se reproduzca un sonido al hacer click en él. -->
+    <button id="botonSonido" class="botonSonido">NO PULSAR</button>
+    <audio id="sonido" src="audio/final.mp3"></audio>
 </body>
 </html>
