Creado estilos.css y modificado estilo de h1

--- a/Primera Pagina/index.html
+++ b/Primera Pagina/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Este comentario no se verá -->
     <title>Mi primera página</title>
-    <script src="js/index.js"></script>    
+    <script src="js/index.js"></script> 
+    <link rel="stylesheet" href="css/estilos.css">   
 </head>
 <body>
     <!-- Insertamos otro comentario -->
@@ -19,5 +20,8 @@
     <!-- Voy a agregar un botón a tu página que hará que se reproduzca un sonido al hacer click en él. -->
     <button id="botonSonido" class="botonSonido">NO PULSAR</button>
     <audio id="sonido" src="audio/final.mp3"></audio>
+    <script id="__bs_script__">//<![CDATA[
+        document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.27.5'><\/script>".replace("HOST", location.hostname));
+    //]]></script>
 </body>
 </html>
